--- a/code/test_ensemble.ipynb
+++ b/code/test_ensemble.ipynb
@@ -86,6 +86,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import unixcoder\n",
+    "ensemble_model = unixcoder.EnsembleModel(state, state_dict='ensemble-model-1k.bin')\n",
+    "print('Ensemble model loaded')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from cosine_train import end_token\n",
     "import numpy as np\n",
     "from common import sim\n",
@@ -101,7 +112,7 @@
     "    sims_probs = list(map(lambda x:x/sum_probs, sims_probs))\n",
     "    return sims_probs    \n",
     "\n",
-    "\n",
+    "# TODO: not used currently\n",
     "def find_best_cell_order3_with_emb(nb, graph3_embeddings, unix_embeddings, coef):\n",
     "    code_cells = nb[nb['cell_type'] == 'code'].reset_index(level='cell_id')\n",
     "    markdown_cells = nb[nb['cell_type'] != 'code'].reset_index(level='cell_id')\n",
@@ -143,51 +154,60 @@
     "from graph_model import Sample\n",
     "import numpy as np\n",
     "import torch\n",
-    "\n",
-    "coefs = [z * 0.1 for z in range(11)]\n",
+    "from ensembles import gen_samples\n",
+    "from common import split_into_batches, OneCell\n",
     "\n",
     "@torch.no_grad()\n",
-    "def predict_order(state: State, nb, graph3_model: MyGraphModel, unixcoder_model, use_sigmoid):\n",
-    "    graph3_embeddings = graph_model.get_nb_embeddings(state, graph3_model, nb)\n",
-    "    unix_embeddings = unixcoder.get_nb_embeddings(state, unixcoder_model, nb)    \n",
-    "    res = {}\n",
-    "    for c in coefs:\n",
-    "        res[c] = find_best_cell_order3_with_emb(nb, graph3_embeddings, unix_embeddings, c)\n",
-    "    return res\n",
+    "def predict_order(state: State, nb, graph3_model: MyGraphModel, unixcoder_model, enseble_model):\n",
+    "    cells = []\n",
+    "    for pos, cell_id in enumerate(get_code_cells(nb)):\n",
+    "        cells.append(OneCell(score=pos+0.5, cell_id=cell_id, cell_type=\"code\"))\n",
     "\n",
-    "def test(state: State, graph3_model: MyGraphModel, unixcoder_model, use_sigmoid, save_to_wandb=True):\n",
+    "\n",
+    "    samples = gen_samples(state, nb, graph3_model, unixcoder_model, correct_order=None)\n",
+    "    batches = split_into_batches(samples, state.config.batch_size)\n",
+    "\n",
+    "    for samples in batches:\n",
+    "        pred = ensembles.predict(state, ensemble_model, samples)\n",
+    "        for i in range(len(samples)):\n",
+    "            cell_id = samples[i].md_cell_id\n",
+    "            pred = pred['preds'][i]\n",
+    "            cells.append(OneCell(score=pred, cell_id=cell_id, cell_type=\"markdown\"))\n",
+    "\n",
+    "    cells.sort(lambda x:x.score)\n",
+    "    return list(map(lambda c:c.cell_id, cells))\n",
+    "\n",
+    "def test(state: State, graph3_model: MyGraphModel, unixcoder_model, ensemble_model, save_to_wandb=True):\n",
     "    graph3_model.eval()\n",
     "    unixcoder_model.eval()\n",
-    "    print('Start testing model:', graph3_model.name)\n",
+    "    ensemble_model.eval()\n",
+    "    print('Start testing model:', ensemble_model.name)\n",
     "    if save_to_wandb:\n",
     "        init_wandb(name='test-ensemble-graph3-unix')\n",
+    "\n",
     "    df = state.cur_train_nbs\n",
     "    all = df.index.get_level_values(0).unique()\n",
-    "    sum_scores = {}\n",
-    "    for c in coefs:\n",
-    "        sum_scores[c] = Score(0, 0)\n",
+    "    sum_scores = Score(0, 0)\n",
     "\n",
     "    for cnt, nb_id in enumerate(tqdm(all)):\n",
     "        nb = df.loc[nb_id]\n",
-    "        my_orders = predict_order(state, nb, graph3_model, unixcoder_model, use_sigmoid=use_sigmoid)\n",
+    "        my_orders = predict_order(state, nb, graph3_model, unixcoder_model, ensemble_model)\n",
     "        to_log = {}\n",
-    "        for c in coefs:\n",
-    "            score = metric.calc_nb_score(\n",
-    "                my_order=my_orders[c], correct_order=state.df_orders.loc[nb_id])\n",
-    "            sum_scores[c] = Score.merge(sum_scores[c], score)\n",
-    "            to_log['my_train_ensemble.'+\"{:.1f}\".format(c)] = sum_scores[c].cur_score\n",
+    "        \n",
+    "        score = metric.calc_nb_score(\n",
+    "            my_order=my_orders, correct_order=state.df_orders.loc[nb_id])\n",
+    "        sum_scores = Score.merge(sum_scores, score)\n",
+    "        to_log['my'] = sum_scores.cur_score\n",
     "        if save_to_wandb:\n",
     "            wandb.log(to_log)    \n",
     "\n",
-    "    for c in coefs:\n",
-    "        print(c, ':', sum_scores[c])\n",
+    "    print('score:', sum_scores)\n",
     "            \n",
     "    if save_to_wandb:\n",
     "        wandb.finish()\n",
     "\n",
     "\n",
-    "state.config.batch_size = 30\n",
-    "test(state, graph3_model, unixcoder_model, use_sigmoid=False, save_to_wandb=True)\n",
+    "test(state, graph3_model, unixcoder_model, ensemble_model, save_to_wandb=True)\n",
     "\n"
    ]
   }
@@ -214,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.7.13"
   },
   "vscode": {
    "interpreter": {
