--- a/code/train_ensemble.ipynb
+++ b/code/train_ensemble.ipynb
@@ -93,45 +93,7 @@
     "from dataclasses import dataclass\n",
     "import math\n",
     "\n",
-    "@dataclass\n",
-    "class Sample:\n",
-    "    text:str\n",
-    "    graph3_pos:float\n",
-    "    unix_pos:float\n",
-    "    total_cells:int\n",
-    "    md_cells:int\n",
-    "    code_cells:int\n",
-    "    part_code_cells:float\n",
-    "    target_pos:float\n",
-    "\n",
-    "\n",
-    "\n",
-    "def gen_nb_samples(nb, graph3_embeddings, unix_embeddings, correct_order):\n",
-    "    code_cells = nb[nb['cell_type'] == 'code'].reset_index(level='cell_id')\n",
-    "    markdown_cells = nb[nb['cell_type'] != 'code'].reset_index(level='cell_id')\n",
-    "        \n",
-    "    code_cell_ids = code_cells['cell_id'].values.tolist()\n",
-    "    code_cell_ids.append('END')\n",
-    "\n",
-    "    samples = []\n",
-    "\n",
-    "    md_cells = len(markdown_cells)\n",
-    "    code_cells = len(code_cells)\n",
-    "    total_cells = md_cells + code_cells\n",
-    "    part_code_cells = code_cells / total_cells\n",
-    "    \n",
-    "    for m_cell_id in markdown_cells['cell_id'].values:\n",
-    "        text = nb.loc[m_cell_id]['source']\n",
-    "        graph_sims_probs = get_probs_by_embeddings(graph3_embeddings, m_cell_id, code_cell_ids, 25.0)\n",
-    "        unix_sims_probs = get_probs_by_embeddings(unix_embeddings, m_cell_id, code_cell_ids, 1000.0)\n",
-    "        \n",
-    "        graph3_pos = get_best_pos_by_probs(graph_sims_probs)\n",
-    "        unix_pos = get_best_pos_by_probs(unix_sims_probs)\n",
-    "\n",
-    "        target_pos = correct_order.index(m_cell_id) / total_cells * code_cells\n",
-    "        samples.append(Sample(text=text, graph3_pos=graph3_pos, unix_pos=unix_pos, total_cells=total_cells, md_cells=md_cells, code_cells=code_cells, part_code_cells=part_code_cells, target_pos=target_pos))\n",
-    "        \n",
-    "    return samples\n",
+    "from ensembles import gen_samples\n",
     "\n",
     "from tqdm import tqdm\n",
     "import metric\n",
@@ -143,11 +105,6 @@
     "import torch\n",
     "import random\n",
     "\n",
-    "@torch.no_grad()\n",
-    "def gen_samples(state: State, nb, graph3_model: MyGraphModel, unixcoder_model, correct_order):\n",
-    "    graph3_embeddings = graph_model.get_nb_embeddings(state, graph3_model, nb)\n",
-    "    unix_embeddings = unixcoder.get_nb_embeddings(state, unixcoder_model, nb)    \n",
-    "    return gen_nb_samples(nb, graph3_embeddings, unix_embeddings, correct_order)\n",
     "\n",
     "def gen_all_samples(state: State, graph3_model: MyGraphModel, unixcoder_model):\n",
     "    graph3_model.eval()\n",
@@ -164,13 +121,7 @@
     "        \n",
     "    return samples\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# TODO: do I need this?\n",
-    "# state.config.batch_size = 30\n",
-    "samples = gen_all_samples(state, graph3_model, unixcoder_model)\n",
-    "\n"
+    "samples = gen_all_samples(state, graph3_model, unixcoder_model)\n"
    ]
   },
   {
@@ -181,6 +132,7 @@
    "source": [
     "from torch.optim import AdamW\n",
     "from torch.optim.lr_scheduler import CosineAnnealingLR\n",
+    "import ensembles\n",
     "\n",
     "def train(state: State, samples, ensemble_model, save_to_wandb=True):\n",
     "    ensemble_model.zero_grad()\n",
@@ -198,18 +150,7 @@
     "\n",
     "    criterion = torch.nn.L1Loss()\n",
     "    for samples in tqdm(batches):\n",
-    "        texts = list(map(lambda s: s.text, samples))\n",
-    "        additional_features = list(map(lambda s: torch.FloatTensor(\n",
-    "            [s.graph3_pos, s.unix_pos, s.total_cells, s.md_cells, s.code_cells, s.part_code_cells]), samples))\n",
-    "        additional_features = torch.stack(additional_features).to(state.device)\n",
-    "\n",
-    "        to_mul = list(map(lambda s: torch.FloatTensor([s.graph3_pos, s.unix_pos]), samples))\n",
-    "        to_mul = torch.stack(to_mul).to(state.device)\n",
-    "\n",
-    "        text_tokens = ensemble_model.encoder.tokenize(texts,max_length=512,mode=\"<encoder-only>\", padding=True)\n",
-    "        text_tokens = torch.tensor(text_tokens).to(state.device)\n",
-    "        pred = ensemble_model(text_tokens, additional_features, state.device)\n",
-    "        pred = torch.einsum(\"ab,ab->a\", pred, to_mul)\n",
+    "        pred = ensembles.predict(state, ensemble_model, samples)['preds']\n",
     "\n",
     "        target = list(map(lambda s: s.target_pos, samples))\n",
     "        target = torch.tensor(target).to(state.device)\n",
@@ -230,7 +171,6 @@
     "\n",
     "\n",
     "ensemble_model = unixcoder.EnsembleModel(state)\n",
-    "ensemble_model.to(state.device)\n",
     "# train(state, samples, ensemble_model, save_to_wandb=True)\n",
     "print('Done')\n"
    ]
@@ -241,6 +181,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import ensembles\n",
+    "\n",
     "@torch.no_grad()\n",
     "def calc_ensemble_dataset_score(state: State, samples, ensemble_model, save_to_wandb=True):\n",
     "    ensemble_model.eval()\n",
@@ -253,23 +195,12 @@
     "    \n",
     "    criterion = torch.nn.L1Loss()\n",
     "    for it, samples in enumerate(tqdm(batches)):\n",
-    "        texts = list(map(lambda s: s.text, samples))\n",
-    "        additional_features = list(map(lambda s: torch.FloatTensor(\n",
-    "            [s.graph3_pos, s.unix_pos, s.total_cells, s.md_cells, s.code_cells, s.part_code_cells]), samples))\n",
-    "        additional_features = torch.stack(additional_features).to(state.device)\n",
-    "\n",
-    "        to_mul = list(map(lambda s: torch.FloatTensor([s.graph3_pos, s.unix_pos]), samples))\n",
-    "        to_mul = torch.stack(to_mul).to(state.device)\n",
-    "\n",
-    "        text_tokens = ensemble_model.encoder.tokenize(texts,max_length=512,mode=\"<encoder-only>\", padding=True)\n",
-    "        text_tokens = torch.tensor(text_tokens).to(state.device)\n",
-    "        pred = ensemble_model(text_tokens, additional_features, state.device)\n",
-    "        pred = torch.einsum(\"ab,ab->a\", pred, to_mul)\n",
+    "        pred = ensembles.predict(state, ensemble_model, samples)\n",
     "\n",
     "        target = list(map(lambda s: s.target_pos, samples))\n",
     "        target = torch.tensor(target).to(state.device)\n",
     "\n",
-    "        loss = criterion(pred, target)\n",
+    "        loss = criterion(pred['preds'], target)\n",
     "        sum_losses += loss.item()\n",
     "\n",
     "        if save_to_wandb:\n",
@@ -362,7 +293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.7.13"
   },
   "vscode": {
    "interpreter": {
