try different ensembles

--- a/code/test_ensemble.ipynb
+++ b/code/test_ensemble.ipynb
@@ -49,8 +49,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "state.load_train_nbs_range(from_=100000, to_=105000)\n",
-    "# state.load_train_nbs_tail(1000)"
+    "# state.load_train_nbs_range(from_=100000, to_=105000)\n",
+    "state.load_train_nbs_tail(1000)"
    ]
   },
   {
@@ -65,7 +65,7 @@
     "\n",
     "graph3_model = MyGraphModel(state, preload_state=\"graph3-model-epoch1.bin\")\n",
     "graph3_model.to(state.device)\n",
-    "print('Model loaded')"
+    "print('Graph3 model loaded')"
    ]
   },
   {
@@ -154,11 +154,20 @@
     "from graph_model import Sample\n",
     "import numpy as np\n",
     "import torch\n",
+    "import ensembles\n",
     "from ensembles import gen_samples\n",
     "from common import split_into_batches, OneCell\n",
     "\n",
     "@torch.no_grad()\n",
     "def predict_order(state: State, nb, graph3_model: MyGraphModel, unixcoder_model, enseble_model):\n",
+    "    graph3_embeddings = graph_model.get_nb_embeddings(state, graph3_model, nb)\n",
+    "    unix_embeddings = unixcoder.get_nb_embeddings(state, unixcoder_model, nb)\n",
+    "    \n",
+    "    code_cells = nb[nb['cell_type'] == 'code'].reset_index(level='cell_id')\n",
+    "    \n",
+    "    code_cell_ids = code_cells['cell_id'].values.tolist()\n",
+    "    code_cell_ids.append('END')\n",
+    "    \n",
     "    cells = []\n",
     "    for pos, cell_id in enumerate(get_code_cells(nb)):\n",
     "        cells.append(OneCell(score=pos+0.5, cell_id=cell_id, cell_type=\"code\"))\n",
@@ -171,10 +180,26 @@
     "        pred = ensembles.predict(state, ensemble_model, samples)\n",
     "        for i in range(len(samples)):\n",
     "            cell_id = samples[i].md_cell_id\n",
-    "            pred = pred['preds'][i]\n",
-    "            cells.append(OneCell(score=pred, cell_id=cell_id, cell_type=\"markdown\"))\n",
+    "            coefs = pred['coefs'][i]\n",
+    "            s = samples[i]\n",
+    "            # cur_pred = s.graph3_pos * coefs[0] + s.unix_pos * coefs[1]\n",
+    "            # cur_pred = s.graph3_pos * 0.0 + s.unix_pos * 1.0\n",
+    "            \n",
+    "            coef = 0.4\n",
+    "            \n",
+    "            graph_sims_probs = get_probs_by_embeddings(graph3_embeddings, cell_id, code_cell_ids, 25.0)\n",
+    "            unix_sims_probs = get_probs_by_embeddings(unix_embeddings, cell_id, code_cell_ids, 1000.0)\n",
+    "            sims_probs = [a*coef + b*(1 - coef) for (a, b) in zip(graph_sims_probs, unix_sims_probs)]\n",
+    "            scores = [0.0] * len(sims_probs)\n",
+    "            for i in range(len(sims_probs)):\n",
+    "                for j in range(len(sims_probs)):\n",
+    "                    scores[j] += abs(i - j) * sims_probs[i]\n",
+    "            best_pos = scores.index(min(scores))\n",
+    "            \n",
+    "            \n",
+    "            cells.append(OneCell(score=best_pos, cell_id=cell_id, cell_type=\"markdown\"))\n",
     "\n",
-    "    cells.sort(lambda x:x.score)\n",
+    "    cells.sort(key=lambda x:x.score)\n",
     "    return list(map(lambda c:c.cell_id, cells))\n",
     "\n",
     "def test(state: State, graph3_model: MyGraphModel, unixcoder_model, ensemble_model, save_to_wandb=True):\n",
@@ -199,7 +224,10 @@
     "        sum_scores = Score.merge(sum_scores, score)\n",
     "        to_log['my'] = sum_scores.cur_score\n",
     "        if save_to_wandb:\n",
-    "            wandb.log(to_log)    \n",
+    "            wandb.log(to_log) \n",
+    "            \n",
+    "        if cnt >= 1000:\n",
+    "            break\n",
     "\n",
     "    print('score:', sum_scores)\n",
     "            \n",
@@ -234,7 +262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.8.12"
   },
   "vscode": {
    "interpreter": {
