--- a/code/train_ensemble.ipynb
+++ b/code/train_ensemble.ipynb
@@ -133,6 +133,7 @@
     "from torch.optim import AdamW\n",
     "from torch.optim.lr_scheduler import CosineAnnealingLR\n",
     "import ensembles\n",
+    "import simple_ensemble\n",
     "\n",
     "def train(state: State, samples, ensemble_model, save_to_wandb=True):\n",
     "    ensemble_model.zero_grad()\n",
@@ -170,7 +171,7 @@
     "        wandb.finish()\n",
     "\n",
     "\n",
-    "ensemble_model = unixcoder.EnsembleModel(state)\n",
+    "ensemble_model = simple_ensemble.SimpleEnsembleModel if use_simple_model else unixcoder.EnsembleModel(state)\n",
     "# train(state, samples, ensemble_model, save_to_wandb=True)\n",
     "print('Done')\n"
    ]
@@ -211,7 +212,7 @@
     "    print('sum losses:', sum_losses)\n",
     "    print('av loss:', sum_losses / len(batches))\n",
     "        \n",
-    "calc_ensemble_dataset_score(state, samples, ensemble_model, save_to_wandb=True)"
+    "# calc_ensemble_dataset_score(state, samples, ensemble_model, save_to_wandb=True)"
    ]
   },
   {
