--- a/code/train_ensemble.ipynb
+++ b/code/train_ensemble.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "state.load_train_nbs_range(from_=100000, to_=100100)\n",
+    "state.load_train_nbs_range(from_=100000, to_=101000)\n",
     "# state.load_train_nbs_tail(1000)"
    ]
   },
@@ -171,7 +171,7 @@
     "        wandb.finish()\n",
     "\n",
     "\n",
-    "ensemble_model = simple_ensemble.SimpleEnsembleModel if use_simple_model else unixcoder.EnsembleModel(state)\n",
+    "ensemble_model = simple_ensemble.SimpleEnsembleModel(state) if state.config.use_simple_ensemble_model else unixcoder.EnsembleModel(state)\n",
     "# train(state, samples, ensemble_model, save_to_wandb=True)\n",
     "print('Done')\n"
    ]
@@ -239,7 +239,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ensemble_model.save('test')"
+    "ensemble_model.save('1k')"
    ]
   },
   {
@@ -294,7 +294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.8.12"
   },
   "vscode": {
    "interpreter": {
