train ensembles differently

--- a/code/train_ensemble.ipynb
+++ b/code/train_ensemble.ipynb
@@ -201,7 +201,7 @@
     "        target = list(map(lambda s: s.target_pos, samples))\n",
     "        target = torch.tensor(target).to(state.device)\n",
     "\n",
-    "        loss = criterion(pred['preds'], target)\n",
+    "        loss = criterion(pred['coefs'][:, 0], target)\n",
     "        sum_losses += loss.item()\n",
     "\n",
     "        if save_to_wandb:\n",
