fix bugs in ensemble training

--- a/code/train_ensemble.ipynb
+++ b/code/train_ensemble.ipynb
@@ -118,7 +118,10 @@
     "    for cnt, nb_id in enumerate(tqdm(all)):\n",
     "        nb = df.loc[nb_id]\n",
     "        samples += gen_samples(state, nb, graph3_model, unixcoder_model, state.df_orders.loc[nb_id])\n",
-    "        \n",
+    "    \n",
+    "    random.seed(787788)\n",
+    "    random.shuffle(samples)\n",
+    "    # TODO: shuffle\n",
     "    return samples\n",
     "\n",
     "samples = gen_all_samples(state, graph3_model, unixcoder_model)\n"
@@ -146,18 +149,17 @@
     "    random.shuffle(samples)\n",
     "    batches = split_into_batches(samples, state.config.batch_size)\n",
     "\n",
-    "    optimizer = AdamW(ensemble_model.parameters(), lr=3e-5, eps=1e-8)\n",
+    "    optimizer = AdamW(ensemble_model.parameters(), lr=1e-3, eps=1e-8)\n",
     "    scheduler = CosineAnnealingLR(optimizer, T_max=len(batches))\n",
     "\n",
     "    criterion = torch.nn.L1Loss()\n",
     "    for samples in tqdm(batches):\n",
-    "        pred = ensembles.predict(state, ensemble_model, samples)['preds']\n",
+    "        pred = ensembles.predict(state, ensemble_model, samples)['coefs'][:,0]\n",
     "\n",
     "        target = list(map(lambda s: s.target_pos, samples))\n",
     "        target = torch.tensor(target).to(state.device)\n",
     "\n",
     "        loss = criterion(pred, target)\n",
-    "\n",
     "        loss.backward()\n",
     "        torch.nn.utils.clip_grad_norm_(ensemble_model.parameters(), 1.0)\n",
     "\n",
@@ -221,7 +223,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train(state, samples, ensemble_model, save_to_wandb=True)"
+    "train(state, samples, ensemble_model, save_to_wandb=False)\n",
+    "calc_ensemble_dataset_score(state, samples, ensemble_model, save_to_wandb=False)"
    ]
   },
   {
@@ -229,9 +232,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "calc_ensemble_dataset_score(state, samples, ensemble_model, save_to_wandb=True)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -239,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ensemble_model.save('1k')"
+    "ensemble_model.save('1k-strange')"
    ]
   },
   {
