--- a/code/train_graph3.ipynb
+++ b/code/train_graph3.ipynb
@@ -56,16 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "state.load_train_nbs_range(from_=0, to_=100000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from cosine_train import run_train_all_new"
+    "state.load_train_nbs_range(from_=0, to_=100)"
    ]
   },
   {
@@ -76,10 +67,11 @@
    "source": [
     "import graph_model\n",
     "from graph_model import MyGraphModel\n",
+    "from cosine_train import run_train_all_new\n",
     "\n",
     "\n",
     "# model = MyGraphModel(state, preload_state=\"graph-model-2-cur-final.bin\")\n",
-    "model = MyGraphModel(state)\n",
+    "model = MyGraphModel(state, next_code_cells=2)\n",
     "model.to(state.device)\n",
     "\n",
     "\n",
@@ -124,7 +116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.7.13"
   },
   "vscode": {
    "interpreter": {
