--- a/code/test_graph3.ipynb
+++ b/code/test_graph3.ipynb
@@ -79,31 +79,10 @@
     "from common import sim\n",
     "from dataclasses import dataclass\n",
     "import math\n",
-    "@dataclass \n",
-    "class Embedding:\n",
-    "    cell_id:str\n",
-    "    text:str\n",
     "\n",
-    "def get_nb_embeddings(state:State, model, nb):\n",
-    "    to_convert = [Embedding(cell_id=end_token, text=end_token)]\n",
-    "    for cell_id in nb.index:\n",
-    "        to_convert.append(Embedding(cell_id=cell_id, text=nb.loc[cell_id]['source']))\n",
-    "    to_convert.sort(key=lambda x:len(x.text))\n",
     "\n",
-    "    num_chunks = (len(to_convert) + state.config.batch_size - 1) // state.config.batch_size\n",
     "\n",
-    "    result = {}\n",
-    "    for batch in np.array_split(to_convert, num_chunks):\n",
-    "        all_texts = list(map(lambda x:x.text, batch))\n",
-    "        encoded = model.encode_texts(state, all_texts)\n",
-    "        embeddings = model(input_ids=encoded['input_ids'], attention_mask=encoded['attention_mask'], use_sigmoid=False, return_scalar=False)\n",
-    "        for i in range(len(batch)):\n",
-    "            result[batch[i].cell_id] = embeddings[i].cpu()\n",
-    "    return result\n",
-    "\n",
-    "def find_best_cell_order3_with_emb(nb, embeddings):\n",
-    "    coef_mul = 25.0\n",
-    "    \n",
+    "def find_best_cell_order3_with_emb(nb, embeddings, coef_mul):    \n",
     "    code_cells = nb[nb['cell_type'] == 'code'].reset_index(level='cell_id')\n",
     "    markdown_cells = nb[nb['cell_type'] != 'code'].reset_index(level='cell_id')\n",
     "        \n",
@@ -146,10 +125,11 @@
     "import wandb\n",
     "from graph_model import Sample\n",
     "import numpy as np\n",
+    "from cosine_train import get_nb_embeddings\n",
     "\n",
     "def predict_order(state: State, nb, model: MyGraphModel, use_sigmoid):\n",
     "    embeddings = get_nb_embeddings(state, model, nb)\n",
-    "    return find_best_cell_order3_with_emb(nb, embeddings)\n",
+    "    return find_best_cell_order3_with_emb(nb, embeddings, coef_mul=model.coef_mul)\n",
     "\n",
     "def test(state: State, model: MyGraphModel, use_sigmoid, save_to_wandb=True):\n",
     "    print('Start testing model:', model.name)\n",
@@ -202,7 +182,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.7.13"
   },
   "vscode": {
    "interpreter": {
