--- a/code/test_graph3.ipynb
+++ b/code/test_graph3.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "state.load_train_nbs_tail(1000)"
+    "state.load_train_nbs_tail(50)"
    ]
   },
   {
@@ -66,6 +66,16 @@
     "model.to(state.device)\n",
     "model.eval()\n",
     "print('Model loaded')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(model.coef_mul)\n",
+    "print(model.next_code_cells)"
    ]
   },
   {
@@ -182,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.8.12"
   },
   "vscode": {
    "interpreter": {
