--- a/code/train_graph3.ipynb
+++ b/code/train_graph3.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "state.load_train_nbs_range(from_=0, to_=100)"
+    "state.load_train_nbs_range(from_=0, to_=5000)"
    ]
   },
   {
@@ -71,7 +71,7 @@
     "\n",
     "\n",
     "# model = MyGraphModel(state, preload_state=\"graph-model-2-cur-final.bin\")\n",
-    "model = MyGraphModel(state, next_code_cells=2, coef_mul=25)\n",
+    "model = MyGraphModel(state, next_code_cells=3, coef_mul=25)\n",
     "model.to(state.device)\n",
     "\n",
     "\n",
@@ -90,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model.save(\"3-15k\")"
+    "model.save(\"test-3\")"
    ]
   }
  ],
@@ -116,7 +116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.8.12"
   },
   "vscode": {
    "interpreter": {
