remove copy-pasting, add no-grad

--- a/code/test_graph3.ipynb
+++ b/code/test_graph3.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "state.load_train_nbs_tail(50)"
+    "state.load_train_nbs_tail(1000)"
    ]
   },
   {
@@ -62,8 +62,7 @@
     "from graph_model import MyGraphModel\n",
     "\n",
     "\n",
-    "model = MyGraphModel(state, preload_state=\"graph3-model-epoch1.bin\")\n",
-    "model.to(state.device)\n",
+    "model = MyGraphModel(state, preload_state=\"graph-model-5k-ncs=3.bin\")\n",
     "model.eval()\n",
     "print('Model loaded')"
    ]
@@ -135,7 +134,7 @@
     "import wandb\n",
     "from graph_model import Sample\n",
     "import numpy as np\n",
-    "from cosine_train import get_nb_embeddings\n",
+    "from graph_model import get_nb_embeddings\n",
     "\n",
     "def predict_order(state: State, nb, model: MyGraphModel, use_sigmoid):\n",
     "    embeddings = get_nb_embeddings(state, model, nb)\n",
