--- a/code/train_graph3.ipynb
+++ b/code/train_graph3.ipynb
@@ -90,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save(\"test-3\")"
+    "model.save(\"5k-ncs=3\")"
    ]
   }
  ],
