try different params for adamw optimizer

--- a/code/train_graph3.ipynb
+++ b/code/train_graph3.ipynb
@@ -71,7 +71,7 @@
     "\n",
     "\n",
     "# model = MyGraphModel(state, preload_state=\"graph-model-2-cur-final.bin\")\n",
-    "model = MyGraphModel(state, next_code_cells=3, coef_mul=25)\n",
+    "model = MyGraphModel(state, next_code_cells=2, coef_mul=25)\n",
     "model.to(state.device)\n",
     "\n",
     "\n",
@@ -90,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save(\"5k-ncs=3\")"
+    "# model.save(\"15k-ncs=2\")"
    ]
   }
  ],
