--- a/code/test_ensemble.ipynb
+++ b/code/test_ensemble.ipynb
@@ -63,7 +63,7 @@
     "from graph_model import MyGraphModel\n",
     "\n",
     "\n",
-    "graph3_model = MyGraphModel(state, preload_state=\"graph3-model-epoch1.bin\")\n",
+    "graph3_model = MyGraphModel(state, preload_state=\"graph-model-100k-ncs=2.bin\")\n",
     "graph3_model.to(state.device)\n",
     "print('Graph3 model loaded')"
    ]
@@ -190,7 +190,7 @@
     "            # cur_pred = s.graph3_pos * coefs[0] + s.unix_pos * coefs[1]\n",
     "            # cur_pred = s.graph3_pos * 0.0 + s.unix_pos * 1.0\n",
     "            \n",
-    "            coef = coefs[0] # 0.4\n",
+    "            coef = 0.6 # coefs[0] # 0.4\n",
     "            \n",
     "            graph_sims_probs = get_probs_by_embeddings(graph3_embeddings, cell_id, code_cell_ids, 25.0)\n",
     "            unix_sims_probs = get_probs_by_embeddings(unix_embeddings, cell_id, code_cell_ids, 1000.0)\n",
@@ -231,8 +231,8 @@
     "        if save_to_wandb:\n",
     "            wandb.log(to_log) \n",
     "            \n",
-    "        if cnt >= 100:\n",
-    "            break\n",
+    "        #if cnt >= 100:\n",
+    "        #    break\n",
     "\n",
     "    print('score:', sum_scores)\n",
     "            \n",
