--- a/code/train_graph3.ipynb
+++ b/code/train_graph3.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "state.load_train_nbs_range(from_=0, to_=5000)"
+    "state.load_train_nbs_range(from_=0, to_=100000)"
    ]
   },
   {
@@ -70,12 +70,12 @@
     "from cosine_train import run_train_all_new\n",
     "\n",
     "\n",
-    "# model = MyGraphModel(state, preload_state=\"graph-model-2-cur-final.bin\")\n",
-    "model = MyGraphModel(state, next_code_cells=2, coef_mul=25)\n",
+    "model = MyGraphModel(state, preload_state=\"graph-model-100k-ncs=2.bin\")\n",
+    "#model = MyGraphModel(state, next_code_cells=2, coef_mul=25)\n",
     "model.to(state.device)\n",
     "\n",
     "\n",
-    "run_train_all_new(state, model)\n",
+    "run_train_all_new(state, model, rand_seed=787788+1, optimizer_state=\"graph-model-100k-ncs=2.opt.bin\")\n",
     "\n",
     "# model.save('graph3-cur-final')\n",
     "\n",
@@ -90,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model.save(\"15k-ncs=2\")"
+    "model.save(\"2epoch-ncs=2\")"
    ]
   }
  ],
