correctly reinitialize state of old optimizer

--- a/code/train_graph3.ipynb
+++ b/code/train_graph3.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "state.load_train_nbs_range(from_=0, to_=100000)"
+    "state.load_train_nbs_range(from_=0, to_=10000)"
    ]
   },
   {
@@ -90,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save(\"2epoch-ncs=2\")"
+    "model.save(\"test\")"
    ]
   }
  ],
