--- a/code/test_ensemble.ipynb
+++ b/code/test_ensemble.ipynb
@@ -49,8 +49,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# state.load_train_nbs_range(from_=100000, to_=105000)\n",
-    "state.load_train_nbs_tail(1000)"
+    "state.load_train_nbs_range(from_=100000, to_=105000)\n",
+    "# state.load_train_nbs_tail(1000)"
    ]
   },
   {
@@ -102,54 +102,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cosine_train import end_token\n",
-    "import numpy as np\n",
-    "from common import sim\n",
-    "from dataclasses import dataclass\n",
-    "import math\n",
-    "\n",
-    "def get_probs_by_embeddings(embeddings, m_cell_id, code_cell_ids, coef_mul):\n",
-    "    markdown_emb = embeddings[m_cell_id]\n",
-    "    sims = [sim(markdown_emb, embeddings[c]) for c in code_cell_ids]\n",
-    "    max_sim = max(sims)\n",
-    "    sims_probs = list(map(lambda x:math.exp((x-max_sim) * coef_mul), sims))\n",
-    "    sum_probs = sum(sims_probs)\n",
-    "    sims_probs = list(map(lambda x:x/sum_probs, sims_probs))\n",
-    "    return sims_probs    \n",
-    "\n",
-    "# TODO: not used currently\n",
-    "def find_best_cell_order3_with_emb(nb, graph3_embeddings, unix_embeddings, coef):\n",
-    "    code_cells = nb[nb['cell_type'] == 'code'].reset_index(level='cell_id')\n",
-    "    markdown_cells = nb[nb['cell_type'] != 'code'].reset_index(level='cell_id')\n",
-    "        \n",
-    "    code_cell_ids = code_cells['cell_id'].values.tolist()\n",
-    "    code_cell_ids.append('END')\n",
-    "    \n",
-    "    order = code_cell_ids.copy()    \n",
-    "    \n",
-    "    for m_cell_id in markdown_cells['cell_id'].values:\n",
-    "        graph_sims_probs = get_probs_by_embeddings(graph3_embeddings, m_cell_id, code_cell_ids, 25.0)\n",
-    "        unix_sims_probs = get_probs_by_embeddings(unix_embeddings, m_cell_id, code_cell_ids, 1000.0)\n",
-    "        sims_probs = [a*coef + b*(1 - coef) for (a, b) in zip(graph_sims_probs, unix_sims_probs)]\n",
-    "        scores = [0.0] * len(sims_probs)\n",
-    "        for i in range(len(sims_probs)):\n",
-    "            for j in range(len(sims_probs)):\n",
-    "                scores[j] += abs(i - j) * sims_probs[i]\n",
-    "        best_pos = scores.index(min(scores))\n",
-    "        \n",
-    "        order.insert(order.index(code_cell_ids[best_pos]), m_cell_id)\n",
-    "    \n",
-    "    assert order[-1] == 'END'\n",
-    "    order.pop()\n",
-    "    return order"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from tqdm import tqdm\n",
     "import metric\n",
     "from metric import Score\n",
@@ -163,11 +115,22 @@
     "from ensembles import gen_samples\n",
     "from common import split_into_batches, OneCell\n",
     "\n",
+    "from cosine_train import end_token\n",
+    "from common import sim\n",
+    "import math\n",
+    "\n",
+    "def get_probs_by_embeddings(embeddings, m_cell_id, code_cell_ids, coef_mul):\n",
+    "    markdown_emb = embeddings[m_cell_id]\n",
+    "    sims = [sim(markdown_emb, embeddings[c]) for c in code_cell_ids]\n",
+    "    max_sim = max(sims)\n",
+    "    sims_probs = list(map(lambda x:math.exp((x-max_sim) * coef_mul), sims))\n",
+    "    sum_probs = sum(sims_probs)\n",
+    "    sims_probs = list(map(lambda x:x/sum_probs, sims_probs))\n",
+    "    return sims_probs    \n",
+    "\n",
+    "\n",
     "@torch.no_grad()\n",
-    "def predict_order(state: State, nb, graph3_model: MyGraphModel, unixcoder_model, enseble_model):\n",
-    "    graph3_embeddings = graph_model.get_nb_embeddings(state, graph3_model, nb)\n",
-    "    unix_embeddings = unixcoder.get_nb_embeddings(state, unixcoder_model, nb)\n",
-    "    \n",
+    "def predict_order(state: State, nb, graph3_model: MyGraphModel, unixcoder_model, graph3_embeddings, unix_embeddings, graph_weight):\n",
     "    code_cells = nb[nb['cell_type'] == 'code'].reset_index(level='cell_id')\n",
     "    \n",
     "    code_cell_ids = code_cells['cell_id'].values.tolist()\n",
@@ -182,17 +145,12 @@
     "    batches = split_into_batches(samples, state.config.batch_size)\n",
     "\n",
     "    for samples in batches:\n",
-    "        pred = ensembles.predict(state, ensemble_model, samples)\n",
     "        for i in range(len(samples)):\n",
     "            cell_id = samples[i].md_cell_id\n",
-    "            coefs = pred['coefs'][i]\n",
-    "            s = samples[i]\n",
-    "            # cur_pred = s.graph3_pos * coefs[0] + s.unix_pos * coefs[1]\n",
-    "            # cur_pred = s.graph3_pos * 0.0 + s.unix_pos * 1.0\n",
     "            \n",
-    "            coef = 0.6 # coefs[0] # 0.4\n",
+    "            coef = graph_weight\n",
     "            \n",
-    "            graph_sims_probs = get_probs_by_embeddings(graph3_embeddings, cell_id, code_cell_ids, 25.0)\n",
+    "            graph_sims_probs = get_probs_by_embeddings(graph3_embeddings, cell_id, code_cell_ids, graph3_model.coef_mul)\n",
     "            unix_sims_probs = get_probs_by_embeddings(unix_embeddings, cell_id, code_cell_ids, 1000.0)\n",
     "            sims_probs = [a*coef + b*(1 - coef) for (a, b) in zip(graph_sims_probs, unix_sims_probs)]\n",
     "            scores = [0.0] * len(sims_probs)\n",
@@ -207,6 +165,7 @@
     "    cells.sort(key=lambda x:x.score)\n",
     "    return list(map(lambda c:c.cell_id, cells))\n",
     "\n",
+    "@torch.no_grad()\n",
     "def test(state: State, graph3_model: MyGraphModel, unixcoder_model, ensemble_model, save_to_wandb=True):\n",
     "    graph3_model.eval()\n",
     "    unixcoder_model.eval()\n",
@@ -217,24 +176,37 @@
     "\n",
     "    df = state.cur_train_nbs\n",
     "    all = df.index.get_level_values(0).unique()\n",
-    "    sum_scores = Score(0, 0)\n",
+    "\n",
+    "    CNT_COEFS = 20\n",
+    "    def get_coef(id):\n",
+    "        return id / (CNT_COEFS)\n",
+    "\n",
+    "    sum_scores = {}\n",
+    "    \n",
+    "    for id in range(CNT_COEFS + 1):\n",
+    "        sum_scores[id] = Score(0, 0)\n",
     "\n",
     "    for cnt, nb_id in enumerate(tqdm(all)):\n",
     "        nb = df.loc[nb_id]\n",
-    "        my_orders = predict_order(state, nb, graph3_model, unixcoder_model, ensemble_model)\n",
+    "        graph3_embeddings = graph_model.get_nb_embeddings(state, graph3_model, nb)\n",
+    "        unix_embeddings = unixcoder.get_nb_embeddings(state, unixcoder_model, nb)\n",
+    "    \n",
+    "        for id in range(CNT_COEFS+1):\n",
+    "            my_orders = predict_order(state, nb, graph3_model, unixcoder_model, graph3_embeddings, unix_embeddings, graph_weight=get_coef(id))\n",
     "        to_log = {}\n",
     "        \n",
     "        score = metric.calc_nb_score(\n",
     "            my_order=my_orders, correct_order=state.df_orders.loc[nb_id])\n",
     "        sum_scores = Score.merge(sum_scores, score)\n",
-    "        to_log['my'] = sum_scores.cur_score\n",
+    "        to_log['my'] = sum_scores[10].cur_score\n",
     "        if save_to_wandb:\n",
     "            wandb.log(to_log) \n",
     "            \n",
     "        #if cnt >= 100:\n",
     "        #    break\n",
     "\n",
-    "    print('score:', sum_scores)\n",
+    "    for id in range(CNT_COEFS+1):\n",
+    "        print('score of ', get_coef(id), ':', sum_scores[id].cur_score)\n",
     "            \n",
     "    if save_to_wandb:\n",
     "        wandb.finish()\n",
