update test ensemble code

--- a/code/test_ensemble.ipynb
+++ b/code/test_ensemble.ipynb
@@ -193,11 +193,12 @@
     "    \n",
     "        for id in range(CNT_COEFS+1):\n",
     "            my_orders = predict_order(state, nb, graph3_model, unixcoder_model, graph3_embeddings, unix_embeddings, graph_weight=get_coef(id))\n",
+    "            score = metric.calc_nb_score(\n",
+    "                my_order=my_orders, correct_order=state.df_orders.loc[nb_id])\n",
+    "            sum_scores[id] = Score.merge(sum_scores[id], score)\n",
     "        to_log = {}\n",
     "        \n",
-    "        score = metric.calc_nb_score(\n",
-    "            my_order=my_orders, correct_order=state.df_orders.loc[nb_id])\n",
-    "        sum_scores = Score.merge(sum_scores, score)\n",
+    "        \n",
     "        to_log['my'] = sum_scores[10].cur_score\n",
     "        if save_to_wandb:\n",
     "            wandb.log(to_log) \n",
