save orders into wandb

--- a/code/debug_viz.ipynb
+++ b/code/debug_viz.ipynb
@@ -49,8 +49,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# state.load_train_nbs_range(from_=100000, to_=105000)\n",
-    "state.load_train_nbs_tail(100)"
+    "state.load_train_nbs_range(from_=104000, to_=105000)\n",
+    "# state.load_train_nbs_tail(100)"
    ]
   },
   {
@@ -63,7 +63,7 @@
     "from graph_model import MyGraphModel\n",
     "\n",
     "\n",
-    "graph3_model = MyGraphModel(state, preload_state=\"graph-model-epoch2.bin\")\n",
+    "graph3_model = MyGraphModel(state, preload_state=\"graph-model-epoch3.bin\")\n",
     "graph3_model.to(state.device)\n",
     "print('Graph3 model loaded')"
    ]
@@ -153,34 +153,28 @@
     "def test(state: State, graph3_model: MyGraphModel, unixcoder_model):\n",
     "    graph3_model.eval()\n",
     "    unixcoder_model.eval()\n",
-    "    print('Start testing model:', ensemble_model.name)\n",
+    "    print('Start testing model:')\n",
     "    \n",
     "    df = state.cur_train_nbs\n",
     "    all = df.index.get_level_values(0).unique()\n",
     "\n",
-    "    more_bad_scores = 10\n",
+    "    wandb_data = []\n",
     "    \n",
     "    for cnt, nb_id in enumerate(tqdm(all)):\n",
     "        nb = df.loc[nb_id]\n",
     "        graph3_embeddings = graph_model.get_nb_embeddings(state, graph3_model, nb)\n",
     "        unix_embeddings = unixcoder.get_nb_embeddings(state, unixcoder_model, nb)\n",
     "    \n",
-    "        my_orders = predict_order(state, nb, graph3_model, unixcoder_model, graph3_embeddings, unix_embeddings, graph_weight=get_coef(id))\n",
+    "        my_orders = predict_order(state, nb, graph3_model, unixcoder_model, graph3_embeddings, unix_embeddings, graph_weight=0.5)\n",
     "        score = metric.calc_nb_score(\n",
     "            my_order=my_orders, correct_order=state.df_orders.loc[nb_id])\n",
-    "        if score.cur_score < 0.5:\n",
-    "            print('Very bad score', score.cur_score)\n",
-    "            print('nb_id:', nb_id)\n",
-    "            print('cnt cells:', len(state.df_orders.loc[nb_id]))\n",
-    "            print('markdown cells:', len(get_markdown_cells(nb)))\n",
-    "            print('order:', my_orders)\n",
-    "            print()\n",
-    "            more_bad_scores -= 1\n",
-    "        \n",
-    "        if more_bad_scores <= 0:\n",
-    "            break\n",
-    "        #if cnt >= 100:\n",
-    "        #    break\n",
+    "        if score.cur_score < 0.8:\n",
+    "            wandb_data.append([nb_id, score.cur_score, len(state.df_orders.loc[nb_id]), len(get_markdown_cells(nb)), len(get_code_cells(nb)), \",\".join(my_orders)])\n",
+    "            \n",
+    "    init_wandb(name='save-bad-nbs')\n",
+    "    my_table = wandb.Table(columns=[\"nb_id\", \"score\", \"cnt cells\", \"cnt markdowns\", \"cnt code\", \"order\"], data=wandb_data)\n",
+    "    wandb.log({\"bad runs\": my_table})\n",
+    "    wandb.finish()\n",
     "\n",
     "test(state, graph3_model, unixcoder_model)\n",
     "\n"
