removing html decreases the score :(

--- a/code/test_graph3.ipynb
+++ b/code/test_graph3.ipynb
@@ -62,7 +62,7 @@
     "from graph_model import MyGraphModel\n",
     "\n",
     "\n",
-    "model = MyGraphModel(state, preload_state=\"graph-model-100k-ncs=2.bin\")\n",
+    "model = MyGraphModel(state, preload_state=\"graph-model-epoch3.bin\")\n",
     "model.eval()\n",
     "print('Model loaded')"
    ]
