--- a/code/debug_viz.ipynb
+++ b/code/debug_viz.ipynb
@@ -50,7 +50,7 @@
    "outputs": [],
    "source": [
     "state.load_train_nbs_range(from_=104000, to_=105000)\n",
-    "# state.load_train_nbs_tail(100)"
+    "#state.load_train_nbs_tail(1000)"
    ]
   },
   {
@@ -176,8 +176,34 @@
     "    wandb.log({\"bad runs\": my_table})\n",
     "    wandb.finish()\n",
     "\n",
-    "test(state, graph3_model, unixcoder_model)\n",
+    "#test(state, graph3_model, unixcoder_model)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@torch.no_grad()\n",
+    "def test(state: State, graph3_model: MyGraphModel, unixcoder_model, nb_id):\n",
+    "    graph3_model.eval()\n",
+    "    unixcoder_model.eval()\n",
+    "    print('Start testing model:')\n",
+    "    \n",
+    "    df = state.cur_train_nbs\n",
+    "    nb = df.loc[nb_id]\n",
+    "    graph3_embeddings = graph_model.get_nb_embeddings(state, graph3_model, nb)\n",
+    "    unix_embeddings = unixcoder.get_nb_embeddings(state, unixcoder_model, nb)\n",
+    "\n",
+    "    my_orders = predict_order(state, nb, graph3_model, unixcoder_model, graph3_embeddings, unix_embeddings, graph_weight=0.5)\n",
+    "    score = metric.calc_nb_score(\n",
+    "        my_order=my_orders, correct_order=state.df_orders.loc[nb_id])\n",
+    "    print(score)\n",
+    "    \n",
+    "#state.config.clean_html = False\n",
+    "test(state, graph3_model, unixcoder_model, nb_id='73fe34072424ad')"
    ]
   }
  ],
