--- a/code/debug_viz.ipynb
+++ b/code/debug_viz.ipynb
@@ -205,6 +205,19 @@
     "#state.config.clean_html = False\n",
     "test(state, graph3_model, unixcoder_model, nb_id='73fe34072424ad')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from language import detect_nb_lang\n",
+    "nb_id = 'da8f893b2ec723'\n",
+    "nb = state.load_one_nb(nb_id)\n",
+    "lang = detect_nb_lang(nb)\n",
+    "print('lang:', lang)"
+   ]
   }
  ],
  "metadata": {
