get better langdetect strategy

--- a/code/debug_viz.ipynb
+++ b/code/debug_viz.ipynb
@@ -23,7 +23,8 @@
    "outputs": [],
    "source": [
     "%pip install transformers\n",
-    "%pip install wandb"
+    "%pip install wandb\n",
+    "%pip install langdetect"
    ]
   },
   {
@@ -213,10 +214,13 @@
    "outputs": [],
    "source": [
     "from language import detect_nb_lang\n",
-    "nb_id = 'da8f893b2ec723'\n",
-    "nb = state.load_one_nb(nb_id)\n",
-    "lang = detect_nb_lang(nb)\n",
-    "print('lang:', lang)"
+    "nb_ids = ['3a1da227ab17a0', '961b63b04a9637', 'dbfe8b7e5b2226', 'da8f893b2ec723', \n",
+    "    'd1ef1808a5d61a', '2a829655be3fab', '241f611e38f2b2', '6207afb54d4159', '97db9116552332', '2fa216ddc5c8cd', '5ca09e62dd4dd0']\n",
+    "# nb_ids = ['97db9116552332']\n",
+    "for nb_id in nb_ids:\n",
+    "    nb = state.load_one_nb(nb_id)\n",
+    "    lang = detect_nb_lang(nb)\n",
+    "    print('nb_id:', nb_id, 'lang:', lang)"
    ]
   }
  ],
