--- a/code/test_ensemble.ipynb
+++ b/code/test_ensemble.ipynb
@@ -49,8 +49,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "state.load_train_nbs_range(from_=100000, to_=105000)\n",
-    "# state.load_train_nbs_tail(1000)"
+    "# state.load_train_nbs_range(from_=100000, to_=105000)\n",
+    "state.load_train_nbs_tail(1000)"
    ]
   },
   {
@@ -63,7 +63,7 @@
     "from graph_model import MyGraphModel\n",
     "\n",
     "\n",
-    "graph3_model = MyGraphModel(state, preload_state=\"graph-model-100k-ncs=2.bin\")\n",
+    "graph3_model = MyGraphModel(state, preload_state=\"graph-model-2epoch-ncs=2.bin\")\n",
     "graph3_model.to(state.device)\n",
     "print('Graph3 model loaded')"
    ]
@@ -140,27 +140,22 @@
     "    for pos, cell_id in enumerate(get_code_cells(nb)):\n",
     "        cells.append(OneCell(score=pos+0.5, cell_id=cell_id, cell_type=\"code\"))\n",
     "\n",
+    "    markdown_cells = get_markdown_cells(nb)\n",
     "\n",
-    "    samples = gen_samples(state, nb, graph3_model, unixcoder_model, correct_order=None)\n",
-    "    batches = split_into_batches(samples, state.config.batch_size)\n",
+    "    for cell_id in markdown_cells:            \n",
+    "        coef = graph_weight\n",
     "\n",
-    "    for samples in batches:\n",
-    "        for i in range(len(samples)):\n",
-    "            cell_id = samples[i].md_cell_id\n",
-    "            \n",
-    "            coef = graph_weight\n",
-    "            \n",
-    "            graph_sims_probs = get_probs_by_embeddings(graph3_embeddings, cell_id, code_cell_ids, graph3_model.coef_mul)\n",
-    "            unix_sims_probs = get_probs_by_embeddings(unix_embeddings, cell_id, code_cell_ids, 1000.0)\n",
-    "            sims_probs = [a*coef + b*(1 - coef) for (a, b) in zip(graph_sims_probs, unix_sims_probs)]\n",
-    "            scores = [0.0] * len(sims_probs)\n",
-    "            for i in range(len(sims_probs)):\n",
-    "                for j in range(len(sims_probs)):\n",
-    "                    scores[j] += abs(i - j) * sims_probs[i]\n",
-    "            best_pos = scores.index(min(scores))\n",
-    "            \n",
-    "            \n",
-    "            cells.append(OneCell(score=best_pos, cell_id=cell_id, cell_type=\"markdown\"))\n",
+    "        graph_sims_probs = get_probs_by_embeddings(graph3_embeddings, cell_id, code_cell_ids, graph3_model.coef_mul)\n",
+    "        unix_sims_probs = get_probs_by_embeddings(unix_embeddings, cell_id, code_cell_ids, 1000.0)\n",
+    "        sims_probs = [a*coef + b*(1 - coef) for (a, b) in zip(graph_sims_probs, unix_sims_probs)]\n",
+    "        scores = [0.0] * len(sims_probs)\n",
+    "        for i in range(len(sims_probs)):\n",
+    "            for j in range(len(sims_probs)):\n",
+    "                scores[j] += abs(i - j) * sims_probs[i]\n",
+    "        best_pos = scores.index(min(scores))\n",
+    "\n",
+    "\n",
+    "        cells.append(OneCell(score=best_pos, cell_id=cell_id, cell_type=\"markdown\"))\n",
     "\n",
     "    cells.sort(key=lambda x:x.score)\n",
     "    return list(map(lambda c:c.cell_id, cells))\n",
@@ -177,9 +172,10 @@
     "    df = state.cur_train_nbs\n",
     "    all = df.index.get_level_values(0).unique()\n",
     "\n",
-    "    CNT_COEFS = 20\n",
+    "    CNT_COEFS = 1 # 20\n",
     "    def get_coef(id):\n",
-    "        return id / (CNT_COEFS)\n",
+    "        return 0.5\n",
+    "        # return id / (CNT_COEFS)\n",
     "\n",
     "    sum_scores = {}\n",
     "    \n",
@@ -199,15 +195,20 @@
     "        to_log = {}\n",
     "        \n",
     "        \n",
-    "        to_log['my'] = sum_scores[10].cur_score\n",
+    "        to_log['my'] = sum_scores[0].cur_score\n",
     "        if save_to_wandb:\n",
     "            wandb.log(to_log) \n",
-    "            \n",
+    "        \n",
+    "        if cnt % 500 == 499:\n",
+    "            for id in range(CNT_COEFS+1):\n",
+    "                print('score of ', \"{:.2f}\".format(get_coef(id)), ':', sum_scores[id].cur_score)\n",
+    "            print()\n",
+    "        \n",
     "        #if cnt >= 100:\n",
     "        #    break\n",
     "\n",
     "    for id in range(CNT_COEFS+1):\n",
-    "        print('score of ', get_coef(id), ':', sum_scores[id].cur_score)\n",
+    "        print('score of ', \"{:.2f}\".format(get_coef(id)), ':', sum_scores[id].cur_score)\n",
     "            \n",
     "    if save_to_wandb:\n",
     "        wandb.finish()\n",
