try to use translator

--- a/code/debug_viz.ipynb
+++ b/code/debug_viz.ipynb
@@ -222,6 +222,19 @@
     "    lang = detect_nb_lang(nb)\n",
     "    print('nb_id:', nb_id, 'lang:', lang)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from language import Translator, get_translator\n",
+    "\n",
+    "marian_ru_en = get_translator('ru', 'en')\n",
+    "marian_ru_en.translate(\n",
+    "    ['что слишком сознавать — это болезнь, настоящая, полная болезнь.'])"
+   ]
   }
  ],
  "metadata": {
@@ -246,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.7.13"
   },
   "vscode": {
    "interpreter": {
